# market-access-public-frontend

./: .coveragerc  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  Pipfile  Procfile  README.md  dmas-pubfe.local-template.env  docker-compose.yml  gulpfile.js  jsconfig.json  manage.py  manifest.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_e2e_tests.sh  webpack.config.js
.circleci/: config.yml
.copilot/: config.yml
.github/workflows/: django.yml  e2e_tests.yml  manual.yml
apps/barriers/: apps.py  context_processors.py  middleware.py  urls.py  views.py
apps/core/: api_client.py  interfaces.py  metadata.py  middleware.py  mixins.py  urls.py  utils.py  views.py
apps/core/fixtures/: metadata.json
apps/core/templatetags/: breadcrumbs.py  govuk_forms.py  headers.py  query_params.py
apps/feedback/: forms.py  urls.py  views.py
apps/healthcheck/: README.md  apps.py  middleware.py  models.py  urls.py  views.py
apps/metadata/: aggregators.py  apps.py  base.py
apps/pingdom/: apps.py  views.py
apps/static/src/js/: index.js
apps/static/src/scss/: _global.scss  index.scss
apps/static/src/scss/app-components/: _all.scss  _breadcrumbs.scss  _cookies.scss  _env-banner.scss  _feedback.scss  _filters.scss  _headings.scss
apps/static/src/scss/pages/: _all.scss  _barrier-detail.scss  _barrier-list.scss
apps/templates/: 404.html  500.html  base.html
apps/templates/barriers/: choose_location.html  choose_sector.html  details.html  find_active_barriers.html  find_barriers_splash.html  find_resolved_barriers.html  list.html
apps/templates/feedback/: barrier.html  footer_banner.html  header_banner.html  issue.html  splash.html  thank-you.html  usability.html
apps/templates/pages/: accessibility.html  cookie-policy.html  cookies.html  disclaimer.html
apps/templates/partials/: additional_links.html  breadcrumbs.html  content_header.html  cookie_banner.html  feedback_banner.html  footer.html  header.html
apps/templates/partials/forms/: radio_input.html  textarea.html
config/: gunicorn.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py  prod.py  test.py  uat.py
docker/local/django/: Dockerfile  entrypoint.sh
docker/local/postgres/: 10_create_users.sh  20_create_db.sh
docker/local/postgres/utils/: create_db.sh  drop_db.sh  restore_dump.sh
test_frontend/: conftest.py  test_navigation.py  utils.py
tests/: conftest.py
tests/barriers/: fixtures.py  test_apps.py  test_views.py
tests/core/: helpers.py  test_api_client.py  test_apps.py  test_barrier_interface.py  test_interfaces.py  test_middlewares.py  test_templatetags.py  test_utils.py  test_views.py
tests/feedback/: constants.py  test_apps.py  test_barrier_view.py  test_issue_view.py  test_splash_view.py  test_usability_view.py
tests/healthcheck/: test_apps.py  test_middleware.py  test_models.py  test_views.py
tests/metadata/: fixtures.py  test_aggregators.py  test_apps.py  test_base.py
tests/pingdom/: test_pingdom.py
tests_e2e/: .gitignore  README.md  browser.py  conftest.py  docker-compose.yml  requirements.txt  settings.py
tests_e2e/pages/: test_landing_page.py  test_page_elements.py
tests_e2e/user_journeys/: test_journeys.py  test_search_and_details.py
tests_e2e/webdriver/: chrome.py  mixins.py
