[tool.poetry]
name = "market-access-public-frontend"
version = "0.0.1"
description = "Hello"
authors = ["Ferenc Csepregi <feri@31.digital>"]

[tool.poetry.dependencies]
python = "^3.9"
directory-client-core = "^7.2.12"
directory-forms-api-client = "==7.3.1"
django = "4.2.10"
django-environ = "==0.4.5"
django-extensions = "==3.0.9"
django-log-formatter-ecs = "==0.0.5"
django-model-utils = "==4.0.0"
django-settings-export = "==1.2.1"
elastic-apm = "~=6.3"
gunicorn = "==20.0.4"
gevent = "==23.9.1"
psycopg2-binary = "==2.9.9"
python-json-logger = "==2.0.0"
python-dateutil = "*"
python-magic = "==0.4.18"
requests = "==2.31.0"
sentry-sdk = "==1.14.0"
whitenoise = "==5.2.0"
urllib3 = "~=1.26.18"
django-webpack-loader = "~=1.3.0"
certifi = "2023.07.22"
pyOpenSSL = "^24.0.0"
sqlparse = "0.4.4"
cryptography = "^42.0.4"
greenlet = "==3.0.1"
importlib-metadata = "*"
opentelemetry-distro = "0.43b0"
opentelemetry-exporter-otlp = "1.22.0"
opentelemetry-instrumentation-wsgi = "0.43b0"
opentelemetry-propagator-aws-xray = "^1.0.1"
opentelemetry-sdk-extension-aws = "^2.0.1"
django-log-formatter-asim = "^0.0.4"
dbt-copilot-python = "^0.2.0"
dj-database-url = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "~=22.3.0"
flake8 = "~=5.0.4"
importlib-metadata = "*"
ipython = "~=8.10.0"
mock = "~=4.0.1"
pytest = "==7.2.0"
pytest-cov = "~=2.10.1"
pytest-django = "~=3.10.0"
pytest-xdist = "~=2.1.0"
werkzeug = "~=3.0.1"
splinter = "^0.14.0"
selenium-wire = "^2.1.2"
coverage = "^7.2.7"

[build-system]
requires = ["poetry==1.6.1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

addopts = """
    --reuse-db
    --ds=config.settings.test
    --cov=.
    --no-cov-on-fail
    --cov-config=.coveragerc
    --cov-branch
"""

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["."]
omit = [
    "./venv/*",
    "*tests*",
    "*config*",
    "*manage.py",
    "*__init__.py",
    "*migrations*",
    "*asgi*",
    "*wsgi*",
    "*admin.py",
    "*urls.py",
]

[tool.coverage.report]
omit = [
    "./venv/*",
    "*tests*",
    "*config*",
    "*manage.py",
    "*__init__.py",
    "*migrations*",
    "*asgi*",
    "*wsgi*",
    "*admin.py",
    "*urls.py",
]
