[tool.poetry]
name = "market-access-public-frontend"
version = "0.0.1"
description = "Hello"
authors = ["Ferenc Csepregi <feri@31.digital>"]

[tool.poetry.dependencies]
python = "^3.9.2"
directory-client-core = "^7.2.12"
directory-forms-api-client = "==7.5.1"
django = "4.2.20"
django-environ = "==0.11.2"
django-extensions = "==3.2.3"
django-model-utils = "==5.0.0"
django-settings-export = "==1.2.1"
elastic-apm = "==6.23.0"
gunicorn = "==23.0.0"
gevent = "==23.9.1"
psycopg2-binary = "==2.9.10"
python-json-logger = "3.3.0"
python-dateutil = "*"
python-magic = "==0.4.27"
requests = "==2.32.3"
sentry-sdk = "2.27.0"
whitenoise = "==6.8.2"
urllib3 = "~=2.3.0"
django-webpack-loader = "~=3.1.0"
certifi = "2024.12.14"
pyOpenSSL = "^25.0.0"
sqlparse = "0.5.3"
cryptography = "44.0.1"
greenlet = "==3.0.3"
importlib-metadata = "*"
opentelemetry-instrumentation-wsgi = "0.51b0"
django-log-formatter-asim = "^0.0.6"
dbt-copilot-python = "^0.2.0"
dj-database-url = "^2.1.0"
tzdata = "^2024.1"
marshmallow = "3.26.0"

[tool.poetry.dev-dependencies]
black = "~=24.10.0"
flake8 = "~=7.1.1"
ipython = "~=8.18.1"
mock = "~=5.1.0"
pytest = "==8.3.4"
pytest-cov = "6.0.0"
pytest-django = "4.11.1"
pytest-xdist = "~=3.6.1"
werkzeug = "~=3.1.3"
splinter = "^0.21.0"
coverage = "^7.2.7"
playwright = "^1.39.0"

[build-system]
requires = ["poetry==1.6.1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

addopts = """
    --reuse-db
    --ds=config.settings.test
    --cov=.
    --no-cov-on-fail
    --cov-config=.coveragerc
    --cov-branch
"""

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["."]
omit = [
    "./venv/*",
    "*tests*",
    "*config*",
    "*manage.py",
    "*__init__.py",
    "*migrations*",
    "*asgi*",
    "*wsgi*",
    "*admin.py",
    "*urls.py",
]

[tool.coverage.report]
omit = [
    "./venv/*",
    "*tests*",
    "*config*",
    "*manage.py",
    "*__init__.py",
    "*migrations*",
    "*asgi*",
    "*wsgi*",
    "*admin.py",
    "*urls.py",
]
